# nienna-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  nienna.py  router.py  system.py
app/services/: __init__.py  dataset_service.py  themes.py
deploy/nginx/: nienna_backend.conf
docs/operations/: nienna_production_runbook.md
scripts/: deploy_production.sh  smoke_test_production.sh
tests/: test_dataset_summary.py  test_healthz_smoke.py
