[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nienna-backend"
version = "0.1.0"
description = "Nienna backend for Rosstat regional data access and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2.2",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pandas>=2.2.0",
  "pyarrow>=16.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0",
  "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
